--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
         "semi": [0],
         "react/prefer-stateless-function": [0],
         "no-console": [0],
-        "arrow-parens": ["error", "as-needed"]
+        "arrow-parens": ["error", "as-needed"],
+        "react/prop-types": [0],
+        "react/jsx-one-expression-per-line": [0]
     }
 }
